[package]
rust-version = "1.82.0"
name = "test"
version = "0.1.0"
edition = "2021"

[lib]
rust-version = "1.82.0"
version = "0.1.0"
name = "testlib"
path = "src/a.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[[bin]]
rust-version = "1.82.0"
version = "0.1.0"
name = "test"
path = "src/main.rs"
edition = "2021"
